test_regress/t/t_class_new_copy_null_bad.out
%Error: t/t_class_new_copy_null_bad.v:16: Null pointer dereferenced
Aborting...
